Add note about forums future

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     Kun on vapaaehtoisesti omasta pussistaan kustantanut lisenssi- ja palvelinkustannuksia yhden klassikkominin hinnan verran tässä 10+ vuoden aikana, on aika ripustaa avaimet naulaan.
   </p>
   <p>
-    Sikälimikäli jotain tahoa kiinnostaa jatkaa foorumin ylläpitoa, niin minulla on sivuston tuore varmuuskopio tallessa.
+    <strike>Sikälimikäli jotain tahoa kiinnostaa jatkaa foorumin ylläpitoa, niin minulla on sivuston tuore varmuuskopio tallessa.</strike><br>
+    <strong>Edit 12.4.</strong> <a href="https://www.mcff.net/">Mini Club Flying Finns</a> ottaa foorumin huostaansa. Pyritään hoitamaan siirto pikimmiten ja foorumi takaisin linjoille.
   </p>
   <p>
     Kustannuksia sivusto aiheuttaa seuraavasti:<br>
